** Release Notes

1.5.89
  * changed --nCore of pathena/prun to allow only 1 or 8

1.5.88
  * using reuseSecOnDemand by default for secondary datasets

1.5.87
  * fixed typo in a message

1.5.86
  * removed --update option from prun/pathena, since obsolete

1.5.85
  * warning message in pathena when --nCore/nThreads>1 and --multiprocess or --multithreaed is missing in --trf

1.5.84
  * added protection against / in output file names
  * introduced PANDA_NICKNAME_REPLACE and PANDA_PRODUCTION_ROLE

1.5.83
  * removed legacy code to set negative walltime

1.5.82
  * removed redundant f-formatted strings for python 2

1.5.81
  * fixed --appendStrToExtStream, and add other options for --trf stream names https://github.com/PanDAWMS/panda-client/pull/41
  * allowing ramCount in newOpts of pbook.retry
  * added --tarBallViaDDM to prun/pathena

1.5.80
  * added framework option to prun and pathena

1.5.79
  * added option name check in pbook.retry

1.5.78
  * protection against missing THistSvc

1.5.77
  * added --useNumFilesInSecDSsAsRatio to prun

1.5.76
  * For changes in ALRB_USER_PLATFORM
  * execute_pchain in panda_api.py

1.5.75
  * warning message for missing nickname in IAM

1.5.74
  * added support for D2AODs in pathena

1.5.73
  * fixed module of JobSpec and FileSpec
  * to allow main in --useAthenaTag
  * improved pchain to set --useAthenaPackages automatically

1.5.72
  * fixed for OIDC

1.5.71
  * synchronous workflow submission

1.5.70
  * fixed FakeAppMgr for recent changes of AthAppMgr.OutStreamType

1.5.69
  * fixed _NativeClient

1.5.68
  * to throw an exception when unpicking is failed

1.5.67
  * added reload_input to pbook
  * added memory warning and -y to pathena/prun

1.5.66
  * fixed FileSpec import

1.5.65
  * added --workflowName to pchain
  * added n_try in a few functions in Client
  * removal of symlink creation in build step
  * added json serializable

1.5.64
  * fixed pyproject.toml
  * improved various messages

1.5.63