@@ -1479,7 +1479,7 @@ currentDir = os.path.realpath(os.getcwd())
 PsubUtils.get_warning_for_pq(options.site, options.excludedSite, tmpLog)
 
 # warning for memory
-is_confirmed = PsubUtils.get_warning_for_memory(options.memory, options.is_confirmed, tmpLog)
+is_confirmed = PsubUtils.get_warning_for_memory(options.memory, options.is_confirmed, options.nCore, tmpLog)
 if not is_confirmed:
     sys.exit(0)
 
