@@ -1,5 +1,8 @@
 ** Release Notes
 
+current
+  * added --nCore info in worning message related to --memory
+
 1.5.89
   * changed --nCore of pathena/prun to allow only 1 or 8
 
